<resources>
    <string name="app_name">Takwira.TN</string>
    <string name="username_log">Nom d`utilisateur</string>
    <string name="password_log">Mot de passe</string>
    <string name="txt_inscr">Inscrivez-vous </string>
    <string name="forget_pass">Mot de passe oblieé ?</string>
    <string name="copyright">Copyright ©2021 MR_INT </string>
    <string name="txt_btn_log">Connexion </string>
    <string name="txt_fullname">Nom et Prénom </string>
    <string name="txt_email">Email </string>
    <string name="txt_phone">Numéro de Téléphone </string>
    <string name="txt_userinscri">Nom d`utilisateur </string>
    <string name="txt_passinscri">Mot de passe </string>
    <string name="txt_cmpt_personnel">Compte Personnel </string>
    <string name="txt_cmpt_professionnel">Compte Professionnel </string>
    <string name="txt_btn_inscri">S`INSRIRE </string>
    <string name="txt_forgetpass_btn">réinitialiser le mot de passe</string>
    <string name="txt_identifier">Vous avez déjà un compte? , S`identifier  </string>
    <string name="txt_goback">Retourner</string>
    <string name="txt_logout">Déconnexion</string>
    <string name="txt_confirm">Confirmer</string>
    <string name="user_name">user_name</string>
    <string name="todo">TODO</string>
    <string name="TXT_profil">Profil</string>
    <string name="txt_staduim">Stades</string>
    <string name="txt_history">Historiques</string>
    <string name="TXT_modifierprofil">Mettre à jour votre profil</string>
    <string name="ffffff">TODO</string>
    <string name="takwira_tn">TAKWIRA.TN</string>
    <string name="todo_dd">TODO</string>
    <string name="txt_stadetunis">Les Stades de Tunis</string>
    <string name="txt_stadeariana">Les Stades de Ariana</string>
    <string name="txt_stadebenarous">Les Stades de Ben Arous</string>
    <string name="txt_stademanouba">Les Stade de Mannouba</string>
    <string name="nom_de_stade">Nom de Stade </string>
    <string name="addresse_stade">Addresse</string>
    <string name="eclairage_stade">Eclairage</string>
    <string name="heures_ouverture_fermeture_stade">Heures (ouverture - fermeture)</string>
    <string name="tapis_stade">Tapis</string>
    <string name="vestiare_stade">Vestiare</string>
    <string name="ville_stade">Ville</string>
    <string name="prix_pour_une_personne_stade">Prix pour une personne (DT)</string>
    <string name="reserve_maintenant_stade">Reserve maintenant</string>
    <string name="nombre_de_personnes">Nombre de personnes</string>
    <string name="prix_total">Prix Total</string>
    <string name="date_d_arriv_e">Date d`arrivée</string>
    <string name="choisissez_la_date_et_l_heure">Choisissez la date et l\'heure</string>
    <string name="Confirmer">Confirmer</string>
    <string name="annuler">Annuler</string>
    <string name="v_rifier_ma_r_servation">vérifier ma réservation</string>
    <string name="merci_pour_votre_r_servation">Merci pour votre réservation</string>
    <string name="nom_du_propri_taire">Nom du propriétaire</string>
    <string name="t_l_phone_propri_taire">Téléphone propriétaire</string>

</resources>