<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <LinearLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="287dp"
                android:layout_height="121dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@drawable/logo_app"
                android:contentDescription="@string/todo_dd" />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/lay1">
        <EditText
            android:id="@+id/id_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/txt_email"
            android:importantForAutofill="no"

            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/lay2"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/id_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@android:color/darker_gray"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password_log"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="18sp"

            tools:targetApi="o" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/lay3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/id_btn_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_log"
            android:onClick="BtnLoginAction"
            android:text="@string/txt_btn_log"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lay4"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_forgetpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:textColor="?attr/colorError"
            android:onClick="TxtGoToForgetPassword"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_inscri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="TxtGoToInscriAction"
            android:text="@string/txt_inscr"
            android:textColor="?attr/colorError"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="100dp"
             />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay6"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/lay5"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/id_txt_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@android:color/white"
             />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="167dp"
        android:layout_marginTop="283dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="402dp"
        android:visibility="gone" />


</RelativeLayout>